# llm-speech-to-insights

./: .env.sample  README.md  main.py  pyproject.toml
src/: __init__.py  config.py  main.py
src/analysis/: __init__.py  insights-analyzer-py.py  summarizer.py
src/storage/: __init__.py  gcs_manager.py
src/transcription/: __init__.py  speech-to-text-py.py
